@@ -1,7 +1,3 @@
 
 Object < #Behavior.
 
-- new
-    "Answer a new initialized instance of the receiver."
-    ^ self basicNew initialize
-
